# web-graphics

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  index.html  readme.md  renderpass.cpp  renderpass.h  vertexbuffer.cpp  vertexbuffer.h  viewer.cpp
package/shaders/: screenpass-frag.glsl  screenpass-vertex.glsl  shadowmap-frag.glsl  tonemappass-frag.glsl  tonemappass-vertex.glsl
shaders/: frag.glsl  screenpass-frag.glsl  screenpass-vertex.glsl  shadowmap-vertex.glsl  vertex.glsl
src/: animator.h  errors.cpp  errors.h  image.cpp  image.h  input.cpp  input.h  main.cpp  material.h  mesh.cpp  mesh.h  primitives.h  renderable.cpp  renderable.h  renderer.cpp  renderer.h  renderpass.cpp  renderpass.h  scene.cpp  scheduler.cpp  scheduler.h  shadowmap.cpp  shadowmap.h  vertexbuffer.cpp  vertexbuffer.h  vertexbufferpool.cpp  vertexbufferpool.h  viewer.cpp  viewport.cpp  viewport.h
src/inputs/: roll.cpp  roll.h
src/io/: loader.cpp  loader.h
src/objects/: object.cpp  object.h
src/renderer/: cubemaptexture.cpp  cubemaptexture.h  gpupool.cpp  gpupool.h  renderpass.cpp  renderpass.h  rendertarget.cpp  rendertarget.h  screenpass.cpp  screenpass.h  shadowpass.cpp  shadowpass.h  texture.cpp  texture.h  texturepool.cpp  texturepool.h  tonemappass.cpp  tonemappass.h  vertexbuffer.cpp  vertexbuffer.h  vertexbufferpool.cpp  vertexbufferpool.h
